- Line height for highlighted text was increased to avoid overlapping

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -289,7 +289,7 @@ text-area.form-control {
 
 .highlighted-text {
     /*margin-bottom: 20px;*/
-    line-height: 30px;
+    line-height: 48px;
 }
 
 .highlighted-text > span {
